[package]
name = "cuvave-midi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
serde = { version = "1.0.163", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
midir = "0.9"
tokio = { version = "1", features = ["full"] }
owo-colors = "3.5"
clap = { version = "4.3", features = ["derive"] }
clap-num = "1.0"
